--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <h1>Header</h1>
+        </div>
+        <div class="main">
+            <h1>Main</h1>
+        </div>
+    </div>
 </body>
 </html>
